--- a/public/quiz/quiz-01.Rmd
+++ b/public/quiz/quiz-01.Rmd
@@ -1,11 +1,8 @@
 ---
-title: "HW 01"
-subtitle: ""
-author: ""
-date: ""
+title: "Quiz 01"
 output: 
   html_document:
-    css: "./sta210-hw.css"
+    css: "sta210-hw.css"
     toc: true
     toc_float: true
 ---
@@ -16,4 +13,4 @@ knitr::opts_chunk$set(echo = TRUE,
                       message=FALSE)
 ```
 
-Instructions will be posted once the homework is assigned.
+Instructions will be posted once the quiz is assigned.
