--- a/public/quiz/quiz-02.Rmd
+++ b/public/quiz/quiz-02.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "HW 01"
+title: "Quiz 02"
 subtitle: ""
 author: ""
 date: ""
@@ -16,4 +16,4 @@ knitr::opts_chunk$set(echo = TRUE,
                       message=FALSE)
 ```
 
-Instructions will be posted once the homework is assigned.
+Instructions will be posted once the quiz is assigned.
