--- a/public/hw/hw-03.Rmd
+++ b/public/hw/hw-03.Rmd
@@ -1,11 +1,8 @@
 ---
 title: "HW 03"
-subtitle: ""
-author: ""
-date: ""
 output: 
   html_document:
-    css: "./sta210-hw.css"
+    css: "sta210-hw.css"
     toc: true
     toc_float: true
 ---
