update schedule and fix HW

--- a/public/hw/hw-06.Rmd
+++ b/public/hw/hw-06.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "HW 01"
+title: "HW 06"
 subtitle: ""
 author: ""
 date: ""
 output: 
   html_document:
-    css: "sta210-hw.css"
+    css: "./sta210-hw.css"
     toc: true
     toc_float: true
 ---
