--- a/static/quiz/quiz-04.Rmd
+++ b/static/quiz/quiz-04.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "HW 01"
+title: "Quiz 04"
 subtitle: ""
 author: ""
 date: ""
 output: 
   html_document:
-    css: "sta210-hw.css"
+    css: "./sta210-hw.css"
     toc: true
     toc_float: true
 ---
@@ -16,4 +16,4 @@ knitr::opts_chunk$set(echo = TRUE,
                       message=FALSE)
 ```
 
-Instructions will be posted once the homework is assigned.
+Instructions will be posted once the quiz is assigned.
