--- a/static/hw/hw-01.Rmd
+++ b/static/hw/hw-01.Rmd
@@ -5,7 +5,7 @@ author: ""
 date: ""
 output: 
   html_document:
-    css: "./sta210-hw.css"
+    css: "sta210-hw.css"
     toc: true
     toc_float: true
 ---
