--- a/public/slides/02-motivate-regression.Rmd
+++ b/public/slides/02-motivate-regression.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Data analysis + modeling"
+title: "Movtivating regression"
 author: "Prof. Maria Tackett"
 output:
   xaringan::moon_reader:
@@ -102,7 +102,7 @@ glimpse(advertising)
 
 ## Let's look at the data
 
-```{r echo=F, fig.height = 2.5}
+```{r echo=F, fig.height = 2.25}
 p1 <- advertising %>% 
   ggplot(mapping=aes(x=tv,y=sales)) + 
   geom_point(alpha=0.5) + 
@@ -135,7 +135,7 @@ Each line represents model we could use to predict `sales` using `tv`, `radio`, 
 
 ## Let's look at the data
 
-```{r echo=F, fig.height = 2.5}
+```{r echo=F, fig.height = 2.25}
 p1 <- advertising %>% 
   ggplot(mapping=aes(x=tv,y=sales)) + 
   geom_point(alpha=0.5) + 
@@ -172,32 +172,14 @@ $$\text{sales} = f(\text{tv}, \text{radio}, \text{newspaper}) + \epsilon$$
 $$\text{sales} = f(\text{tv}, \text{radio}, \text{newspaper}) + \epsilon$$
 ]
 
-- **Goal**: Estimate $f$
+- **Goal**: Define $f$
 
 --
 
-- How do we estimate $f$?
-
---
-
-    - <font class="vocab">Non-parametric methods:</font> estimate $f$ by getting as close to the data points as possible without making explicit assumptions about the functional form of $f$
+- How do we define $f$?
+  - Make an assumption about the functional form $f$
+  - Use the data to fit a model based on that form 
     
---
-
-    - <font class="vocab">Parametric methods:</font> estimate $f$ by making an assumption about the functional form of $f$ then using the data to fit a model based on that form 
-    
----
-
-class: middle, center
-
-.alert[
-In this class, we will focus on <font class="vocab">parametric methods</font>
-]
-
-<small>
-*Non-parametric methods covered in STA 325: Machine Learning & Data Mining*
-</small>
-
 ---
 
 ## General form of model
@@ -211,15 +193,14 @@ $$Y = f(\mathbf{X}) + \epsilon$$
 - $\mathbf{X} = (X_1, X_2, \ldots, X_p)$: predictor variables
 
 - $f$: fixed but unknown function
-    - systematic information $\mathbf{X}$ provides about $Y$
 
 - $\epsilon$: random error term with mean 0 that is independent of $\mathbf{X}$ 
    
 ---
 
-## How to estimate $f$?
+## How to define $f$
 
-In general, we will use the following steps to estimate $f$
+In general, 
 
 1. Choose the functional form of $f$, i.e. <font class="vocab">choose the appropriate model given the data</font>
     - Ex: $f$ is a linear model
@@ -228,136 +209,54 @@ In general, we will use the following steps to estimate $f$
 --
 
 2. Use the data to fit (or train) the model, i.e. <font class="vocab">estimate the model parameters</font>
-    - Ex: Use a method to estimate the model parameters $\beta_0, \beta_1, \ldots, \beta_p$
+    - Ex: Find estimates of $\beta_0, \beta_1, \ldots, \beta_p$
 
 ---
 
-## Why estimate $f$?
+## Why?
 
-Suppose we have the model
-
-$$\text{sales} = \beta_0 + \beta_1 \times \text{tv} + \beta_2 \times \text{radio} + \beta_3 \times \text{newspaper} + \epsilon$$
-<br><br><br>
-
---
-
-.question[
-What are 1-2 questions you could answer using this model?
+.alert[
+$$\hat{\text{sales}} = \hat{\beta}_0 + \hat{\beta}_1 \times \text{tv} + \hat{\beta}_2 \times \text{radio} + \hat{\beta}_3 \times \text{newspaper}$$
 ]
 
----
-
-## Why estimate $f$?
-
-There are two types of questions we may be interesting in answering with our model: 
-
-- <font class="vocab">Prediction: </font> What is the expected $Y$  given particular values of  $X_1, X_2, \ldots, X_p$? 
 --
 
-    - Ex: What is the expected `sales` in a market if the company spends $100,000 TV ads, $30,000 on radio ads, and $10,000 on newspaper ads?
+.vocab[Prediction:]
+
+What do we expect `sales` to be in a market where there is $100,000 spent on TV ads, $30,000 spent on radio ads, and $10,000 spent on newspaper ads?
 
 --
 
-- <font class="vocab">Inference: </font> What is the relationship between $\mathbf{X}$ and $Y$. How does $Y$ change as a function of $\mathbf{X}$?
---
+.vocab[Inference:]
 
-    - Ex: Which type of media advertising generates the largest boost in sales?
-
-
----
-
-## Prediction 
-
-$$\hat{\text{sales}} = \hat{f}(\text{tv},\text{radio}, \text{newspaper})$$
-
-- **Question**: How accurate is $\hat{\text{sales}}$ as a prediction of $\text{sales}$?
-
-- This depends on two quantities: reducible and irreducible error
-
---
-    - <font class="vocab">Reducible error:</font> error that can potentially be reduced by using a model , $\hat{f}$, that is a more appropriate fit for the data
-
---
-    - <font class="vocab">Irreducible error: </font> Error that cannot be reduced even if the model, $\hat{f}$, is a perfect fit. In other words, this is variability associated with $\epsilon$
-
----
-
-class: middle, center
-
-.question[
-In the case of the `advertising` data, what types of factors are included in the irreducible error?
-]
-
----
-
-## Inference
-
-$$\hat{\text{sales}} = \hat{f}(\text{tv},\text{radio}, \text{newspaper})$$
-
-- **Question**: How is `sales` affected as `tv`, `radio`, and `newspaper` change?
---
-
-- We can break this into several questions: 
-
---
-    - What predictors are important for understanding sales? 
---
-    - What is the relationship between sales and each predictor? 
---
-    - Does the linear model adequately describe the relationship between `sales` and `tv`, `newspaper`, and `radio`, or is a more complex model required?
+What is the relationship between spending on TV ads an sales after accounting for spending on radio and newspaper ads?
 
 ---
 
 ## Course Outline
 
-- **Unit 1: Quantitative Response Variables**
-    - Simple Linear Regression 
-    - Multiple Linear Regression
-<br><br>
---
+.pull-left[
 
-- **Unit 2: Categorical Response Variable**
-    - Logistic Regression 
-    - Multinomial Logistic Regression 
+.vocab[Unit 1: Quantitative Response Variables]
+  - Simple Linear Regression 
+  - Multiple Linear Regression
 
----
+<br> 
 
-## Course Outline
+.vocab[Unit 3: Looking Ahead]
+  - Weighted least squares
+  - Dealing with messy data
+  - Modeling in practice
 
-- **Unit 3: Modeling in Practice**
-    - Model Validation
-    - Dealing with messy data
-<br><br>
---
+]
 
-- **Unit 4: Looking Ahead**
-    - Time Series 
-    - Other models? 
- 
----
+.pull-right[
 
-## Recap 
+- .vocab[Unit 2: Categorical Response Variable]
+  - Logistic Regression 
+  - Multinomial Logistic Regression 
 
-- We want to find the function that best fits the relationship between a response variable $Y$ and some predictor variables $X_1, \ldots, X_p$
-
-- We will use **parametric** methods to find the function 
-    - Choose the appropriate model
-    - Estimate values of the model parameters
-
-- There are two main purposes for the model: 
-    - Prediction 
-    - Inference
-
----
-
-## Recap 
-
-Can you answer these questions? 
-
-**Motivating Regression Analysis**
-- Given $Y = f(\mathbf{X}) + \epsilon$
-    - What are the two basic steps for estimating $f$? 
-    - What are two possible reasons for estimating $f$?
+]
 
 
     
